Correction Bug Mineur version mobile.

--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ display: flex;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-bottom: 1rem;
 }
 .Card{
     background-color: white;
@@ -220,6 +221,7 @@ figure{
 .lodgingMainCardRatingIcon{
     color: #0065FC; 
     margin-right: -3px;
+    font-size: 0.65rem;
 }
 .lodgingMainCardRatingIcon[data-yolo=true] {
     color: #DEEBFF;
